fix: chat width on mobile

--- a/less/chats.less
+++ b/less/chats.less
@@ -592,6 +592,9 @@
 		.chats-full, .chat-modal {
 			height: calc(100vh - var(--panel-offset));
 		}
+		[component="chat/messages"] {
+			width: calc(100vw);
+		}
 	}
 
 	[data-action="pop-out"] {
